--- a/menu.html
+++ b/menu.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu More</title>
+    <title>Menu | La Carte</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
-<body class="bg-warning">
+
+<body id="body">
+
+    <nav class="navbar navbar-expand-lg bg-warning  sticky-sm-top">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html">
+                <img src="img/Group (1).png" alt="company logo" class="fs-1 text-white"> <span
+                    class="text-white text-uppercase">La Carte</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white text-uppercase" aria-current="page"
+                            href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white text-uppercase" href="./about.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white text-uppercase" href="./contact.html">Contact us</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a> -->
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+<section class="bg-warning">
     <div id="menu-section">
         <div class="container">
-            <div class="btn btn-success btn-lg"><a href="index.html">Back to Home</a></div>
             <div class="menu">
                 <h3 class="text-center">Pasta</h3>
                 <div class="row">
@@ -250,8 +295,39 @@
                         </div>
                     </div>
                 </div>
-            <div class="btn btn-success btn-lg"><a href="index.html">Back to Home</a></div>
         </div>
     </div>
+</section>
+
 </body>
+
+<!-- <footer class="bg-warning">
+    <nav class="pt-3 navbar navbar-expand-lg navbar-expand-md auto-hiding-navbar bg-transparent">
+        <div class="container">
+            <a href="./index.html" class="navbar-brand">
+                <img src="img/Group (1).png" alt="company logo" class="fs-1 text-white"> <span
+                    class="text-white">La Carte</span>
+            </a>
+
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto mx-5">
+                    <li class="nav-item mx-3"><a class="nav-link fs-4 text-white" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item mx-3"><a class="nav-link fs-4 text-white" href="./menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item mx-3"><a class="nav-link fs-4 text-white" href="./about.html">About</a>
+                    </li>
+                    <li class="nav-item mx-3"><a class="nav-link fs-4 text-white"
+                            href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+</footer> -->
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+crossorigin="anonymous"></script>
+
 </html>
